Added the option to select from a Date; and the content for the other two cities Sydney and Brisbane.

--- a/webServer/src/main/resources/web/index.html
+++ b/webServer/src/main/resources/web/index.html
@@ -19,9 +19,9 @@
 			<nav>
 				<ul class="nav nav-justified">
 					<li class="active"><a href="index.html">Introduction</a></li>
-					<li><a href="#">Brisbane</a></li>
+					<li><a href="brisbane.html">Brisbane</a></li>
 					<li><a href="melbourne.html">Melbourne</a></li>
-					<li><a href="#">Sydney</a></li>
+					<li><a href="sydney.html">Sydney</a></li>
 					<li><a href="realtime.html">Real Time</a></li>
 				</ul>
 			</nav>
@@ -55,11 +55,11 @@
 			<br />
 			<h3>Implementation Structure</h3>
 			<img src="system.png" alt="" /> <br /> <br />
-			<h3>Harvested Tweets from 1 May 2015 to 16 May 2015</h3>
+			<h3>Harvested Tweets from 21 April 2015 to 19 May 2015</h3>
 			<ul>
-				<li><p>Brisbane: 2,562</p></li>
-				<li><p>Melbourne: 13,386</p></li>
-				<li><p>Sydney: 18,127</p></li>
+				<li><p>Brisbane: 2,719</p></li>
+				<li><p>Melbourne: 14,616</p></li>
+				<li><p>Sydney: 19,351</p></li>
 			</ul>
 			<br />
 		</div>
