--- a/webServer/src/main/resources/web/realtime.html
+++ b/webServer/src/main/resources/web/realtime.html
@@ -21,9 +21,9 @@
 			<nav>
 				<ul class="nav nav-justified">
 					<li><a href="index.html">Introduction</a></li>
-					<li><a href="#">Brisbane</a></li>
+					<li><a href="brisbane.html">Brisbane</a></li>
 					<li><a href="melbourne.html">Melbourne</a></li>
-					<li><a href="#">Sydney</a></li>
+					<li><a href="sydney.html">Sydney</a></li>
 					<li class="active"><a href="realtime.html">Real Time</a></li>
 				</ul>
 			</nav>
@@ -31,13 +31,13 @@
 		<div class="main">
 			<h3 class="lead text-primary" style="padding-left: 10px">Real Time Tweets in Three Cities</h3>
 			<div class="col-md-4">
-				<div id="map-canvas-bri" style="width: 500px; height: 500px; padding: 10px"></div>
+				<div id="map-canvas-bri" style="width: 100%; height: 500px; padding: 10px"></div>
 			</div>
 			<div class="col-md-4">
-				<div id="map-canvas-mel" style="width: 500px; height: 500px; padding: 10px"></div>
+				<div id="map-canvas-mel" style="width: 100%; height: 500px; padding: 10px"></div>
 			</div>
 			<div class="col-md-4">
-				<div id="map-canvas-syd" style="width: 500px; height: 500px; padding: 10px"></div>
+				<div id="map-canvas-syd" style="width: 100%; height: 500px; padding: 10px"></div>
 			</div>
 		</div>
 	</div>
