--- a/webServer/src/main/resources/web/brisbane.html
+++ b/webServer/src/main/resources/web/brisbane.html
@@ -34,11 +34,12 @@
 		</div>
 		<div class="main">
 			<h3 class="lead text-primary" style="padding-left: 10px">Main
-				Roads Tweets Mapping</h3>
+				Roads Tweets Mapping in Brisbane</h3>
 			<div class="col-md-8">
 				<div id="map-canvas" style="width: 100%; height: 600px"></div>
 			</div>
 			<div class="col-md-4">
+			<p>Date: <input type="text" id="datepicker"></p>
 				<div class="panel-group" style="padding-left: 10px;" id="accordion">
 					<div class="panel panel-default">
 						<div class="panel-heading">
