--- a/webServer/src/main/resources/web/index.html
+++ b/webServer/src/main/resources/web/index.html
@@ -11,6 +11,7 @@
 	src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script
 	src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<script src="index.js"></script>
 </head>
 
 <body>
@@ -36,30 +37,26 @@
 			<div class="page-header">
 				<p class="lead text-primary">This is the web presentation of
 					Distributed Computing Project, Semester 1 2015.</p>
-				<p class="lead text-primary">Project Title: Twitter at
-					identifying real time transport congestion across different cities
-					of Australia</p>
+				<p class="lead text-primary">Project Title: Use of Twitter for
+					Identification of (Near) Real Time Transport Congestion across the
+					Cities of Australia</p>
 				<p class="lead text-primary">
 					Student & Email: Fengmin Deng <em><u>dengf@student.unimelb.edu.au</u></em>
 				</p>
+				<p class="lead text-primary">Supervisor: Professor Richard
+					Sinnott</p>
 			</div>
 			<br />
 			<h3>Project Description</h3>
-			<p>In this project, it is attempted to explore the relevance of
-				tweeting on the roads to traffic congestion. The system is developed
-				by firstly adopting the 'road block searching' algorithm devised by
-				Yikai Gong to an implementation for any city. Secondly three
-				instances in NeCTAR cloud are deployed to harvest main roads tweets
-				from Brisbane, Melbourne and Sydney. Thirdly a visualization mapping
-				is built to represent the clustering of tweets along the road.</p>
+			<p>This project has attempted to explore the relevance of tweeting on the roads to traffic congestion. The system is developed by firstly adopting the 'road block searching' algorithm devised by Yikai Gong (MSc Dissertation, 2014) to an implementation for any city. Secondly three instances in NeCTAR cloud are deployed to harvest main roads tweets from Brisbane, Melbourne and Sydney. Thirdly the transport congestion are tagged after running ELKI (release 0.6), a clustering application with customized distance function. Last a visualization mapping is built to represent the clustering of tweets along the road.</p>
 			<br />
 			<h3>Implementation Structure</h3>
 			<img src="system.png" alt="" /> <br /> <br />
-			<h3>Harvested Tweets from 21 April 2015 to 19 May 2015</h3>
+			<h3 id="date">Harvested Tweets from 21 April 2015 to 1 June 2015</h3>
 			<ul>
-				<li><p>Brisbane: 2,719</p></li>
-				<li><p>Melbourne: 14,616</p></li>
-				<li><p>Sydney: 19,351</p></li>
+				<li><p id="bn">Brisbane:</p></li>
+				<li><p id="mn">Melbourne:</p></li>
+				<li><p id="sn">Sydney:</p></li>
 			</ul>
 			<br />
 		</div>
