--- a/webServer/src/main/resources/web/sydney.html
+++ b/webServer/src/main/resources/web/sydney.html
@@ -34,7 +34,7 @@
 		</div>
 		<div class="main">
 			<h3 class="lead text-primary" style="padding-left: 10px">Main
-				Roads Tweets Mapping</h3>
+				Roads Tweets Mapping in Sydney</h3>
 			<div class="col-md-8">
 				<div id="map-canvas" style="width: 100%; height: 600px"></div>
 			</div>
